<resources>
    <string name="app_name">Cachie</string>

    <string name="title_permission">Permissions</string>

    <string name="permission_title">Woah there!</string>
    <string name="permission_message">We need a special permission to continue. Use ADB to run the following command (one line):</string>
    <string name="permission_command">adb shell pm grant com.draco.cachie android.permission.WRITE_SECURE_SETTINGS</string>

    <string name="please_wait">Waiting for permission</string>
    <string name="copied">Copied to clipboard</string>

    <string name="snackbar_intent_failed">Could not handle this action</string>

    <string name="developer_url">https://www.github.com/tytydraco</string>
    <string name="source_url">https://www.github.com/tytydraco/Cachie</string>
    <string name="contact_url">mailto:tylernij@gmail.com</string>

    <string name="category_config">Configuration</string>
    <string name="category_about">About</string>

    <string name="pref_action_key_reset">reset</string>
    <string name="pref_action_title_reset">Reset</string>
    <string name="pref_action_summary_reset">Set everything back to device defaults</string>

    <string name="pref_config_key_sys_storage_threshold_percentage">sys_storage_threshold_percentage</string>
    <string name="pref_config_title_sys_storage_threshold_percentage">Low-storage minimum reporting threshold</string>
    <string name="pref_config_summary_sys_storage_threshold_percentage">Percentage of available storage to consider the device to be running low on storage</string>

    <string name="pref_config_key_sys_storage_threshold_max_bytes">sys_storage_threshold_max_bytes</string>
    <string name="pref_config_title_sys_storage_threshold_max_bytes">Low-storage maximum byte threshold</string>
    <string name="pref_config_summary_sys_storage_threshold_max_bytes">Maximum number of bytes to consider the device to be low on storage; prevents the above toggle from overshooting</string>

    <string name="pref_config_key_sys_storage_full_threshold_bytes">sys_storage_full_threshold_bytes</string>
    <string name="pref_config_title_sys_storage_full_threshold_bytes">Max-storage minimum bytes</string>
    <string name="pref_config_summary_sys_storage_full_threshold_bytes">Maximum number of available storage to consider the device to be full; this number is reserved for the system to avoid system-wide crashing</string>

    <string name="pref_config_key_sys_storage_cache_percentage">sys_storage_cache_percentage</string>
    <string name="pref_config_title_sys_storage_cache_percentage">Cache minimum threshold</string>
    <string name="pref_config_summary_sys_storage_cache_percentage">Percentage of available storage to reserve for cached data</string>

    <string name="pref_config_key_sys_storage_cache_max_bytes">sys_storage_cache_max_bytes</string>
    <string name="pref_config_title_sys_storage_cache_max_bytes">Cache maximum byte threshold</string>
    <string name="pref_config_summary_sys_storage_cache_max_bytes">Maximum number of bytes to allow cached data to consume</string>

    <string name="pref_developer_title">Developer</string>
    <string name="pref_developer_summary">Tyler Nijmeh</string>
    <string name="pref_developer_key">developer</string>

    <string name="pref_source_title">Source code</string>
    <string name="pref_source_summary">Check out this project on GitHub</string>
    <string name="pref_source_key">source</string>

    <string name="pref_contact_title">Contact</string>
    <string name="pref_contact_summary">Email me with questions, comments, and concerns</string>
    <string name="pref_contact_key">contact</string>

    <string name="pref_licenses_title">Licenses</string>
    <string name="pref_licenses_summary">View the open source licenses</string>
    <string name="pref_licenses_key">licenses</string>
</resources>