<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_config">
        <Preference
            android:title="@string/pref_action_title_reset"
            android:summary="@string/pref_action_summary_reset"
            android:key="@string/pref_action_key_reset" />
        <EditTextPreference
            android:title="@string/pref_config_title_sys_storage_threshold_percentage"
            android:summary="@string/pref_config_summary_sys_storage_threshold_percentage"
            android:key="@string/pref_config_key_sys_storage_threshold_percentage" />
        <EditTextPreference
            android:title="@string/pref_config_title_sys_storage_threshold_max_bytes"
            android:summary="@string/pref_config_summary_sys_storage_threshold_max_bytes"
            android:key="@string/pref_config_key_sys_storage_threshold_max_bytes" />
        <EditTextPreference
            android:title="@string/pref_config_title_sys_storage_full_threshold_bytes"
            android:summary="@string/pref_config_summary_sys_storage_full_threshold_bytes"
            android:key="@string/pref_config_key_sys_storage_full_threshold_bytes" />
        <EditTextPreference
            android:title="@string/pref_config_title_sys_storage_cache_percentage"
            android:summary="@string/pref_config_summary_sys_storage_cache_percentage"
            android:key="@string/pref_config_key_sys_storage_cache_percentage" />
        <EditTextPreference
            android:title="@string/pref_config_title_sys_storage_cache_max_bytes"
            android:summary="@string/pref_config_summary_sys_storage_cache_max_bytes"
            android:key="@string/pref_config_key_sys_storage_cache_max_bytes" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_about">
        <Preference
            android:title="@string/pref_developer_title"
            android:summary="@string/pref_developer_summary"
            android:key="@string/pref_developer_key"
            android:icon="@drawable/ic_baseline_person_pin_24" />
        <Preference
            android:title="@string/pref_source_title"
            android:summary="@string/pref_source_summary"
            android:key="@string/pref_source_key"
            android:icon="@drawable/ic_baseline_code_24" />
        <Preference
            android:title="@string/pref_contact_title"
            android:summary="@string/pref_contact_summary"
            android:key="@string/pref_contact_key"
            android:icon="@drawable/ic_baseline_email_24" />
        <Preference
            android:title="@string/pref_licenses_title"
            android:summary="@string/pref_licenses_summary"
            android:key="@string/pref_licenses_key"
            android:icon="@drawable/ic_baseline_insert_drive_file_24" />
    </PreferenceCategory>
</PreferenceScreen>